# KnowledgeNexus

./: .env.sample  .gitignore  Dockerfile  Dockerfile.gradio  README.md  check_apoc.py  cli.py  docker-compose.gradio.yml  docker-compose.yml  document_converter.py  gradio_app.py  main.py  opentelemetry_setup.py  pyproject.toml  requirements.txt
.cursor/rules/: knowledge-nexus-guidelines.mdc  knowledgenexus-openai-usage-guidelines.mdc
.prompts/: KnowledgeNexus – CLI-Based-Entity-Extraction-Pipeline.md  KnowledgeNexus-Project-Initialization-Spec.md
api/: main.py
cognitive/: entity_extraction.py
db/: __init__.py  db_manager.py  documents.py  entities.py  knowledge_search.py  memories.py  topics.py  vector_index.py  vector_utils.py
knowledge/: __init__.py  watcher.py
knowledge_nexus_files/: 3f6b7d0e-4f2e-4f9c-b5d4-793d0bb07719_text_input.txt  6a61874a-9f88-4608-b75b-fa52ead776ff_text_input_a6196ba0-06e1-4a03-b65e-cbdf4a57f53d.md  Screenshot 2025-02-18 234903_aa04682b-96f8-4862-86da-8955f173e77d.md
knowledge_nexus_files/markdown/: 00ee9ba9-c0b1-44f4-aa89-97f6be2f0793_CC2019 - Eric Lampron.md  128f8b10-fdd3-4cad-a496-88d4d1e24e48_d96ffbcc-84d8-4753-a704-c95325d98949_text_input.md  (+16 more)
models/: document.py  entities.py  llm_document_metadata.py  memory.py  relationship.py  topic.py
nexus/: core.py  document_pipeline.py  entity_pipeline.py  entity_processing.py  entity_resolution.py  pipeline.py
prompts/: KnowledgeNexus-Entity-Deduplication-&-AI-Assisted-Resolution.md
tests/: conftest.py  test_db_manager.py  test_entity_extraction.py
(+13 files in other folders)
