[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge_nexus"
version = "0.1.0"
description = "KnowledgeNexus - A CLI-based entity extraction pipeline"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "KnowledgeNexus Team" }
]
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-dotenv>=1.0.0",
    "watchdog>=3.0.0",
    "neo4j>=5.0.0",
    "click>=8.0.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=knowledge_nexus --cov-report=html"

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 79
extend-ignore = "E203" 